@@ -1,3 +1,7 @@
+2001-07-19  Bradford Hovinen  <hovinen@ximian.com>
+
+	* Makefile.am (install-data-local): Uncomment
+
 2001-07-19  Richard Hestilow  <hestilow@ximian.com>
 	
 	* Gnome.directory.in.in: Change name to "Main".
